Fix md gap bug highlight_item

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4640,6 +4640,9 @@ ol {
     grid-row: span 3 / span 3;
   }.lg\:row-span-1{
     grid-row: span 1 / span 1;
+  }.lg\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
   }.lg\:mt-2{
     margin-top: 0.5rem;
   }.lg\:mb-0{
